Fix layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,11 @@ body,
 #root {
   overflow: auto;
 }
+
+body {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+}
